Cambios en el diseño
Se agrego un footer animado asi como sus derechos de autor

--- a/index.html
+++ b/index.html
@@ -36,15 +36,18 @@
       </tfoot>
     </table>
   </div>
+  <footer>
   <p align="center">
-    <a href="https://plus.google.com/u/0/117691526606810995224"> <img id='gplus1'src="gp16.png">
-    <a href="https://www.facebook.com/Crishard6277"> <img id='fb1'src="fb24.png">
-    <a href="https://twitter.com/cristian_leto"><img id='tw1' src="tw32.png">
-    <a href="logoRyC.png"> <img id='logo'src="logoRyC.png">
-    <a href="http://rauldominguez.github.io/"><img id='tw2' src="tw32.png">
-    <a href="https://www.facebook.com/raul.dominguezm"> <img id='fb1'src="fb24.png">
-    <a href="https://plus.google.com/102428061497567735125"> <img id='gplus1'src="gp16.png">
+    <a href="https://plus.google.com/u/0/117691526606810995224"> <img id='gplus1'src="gp16.png"></a>
+    <a href="https://www.facebook.com/Crishard6277"> <img id='fb1'src="fb24.png"></a>
+    <a href="https://twitter.com/cristian_leto"><img id='tw1' src="tw32.png"></a>
+    <a href="#"> <img class="brillo" id='logo' src="logo.png"></a>
+    <a href="http://rauldominguez.github.io/"><img id='tw2' src="tw32.png"></a>
+    <a href="https://www.facebook.com/raul.dominguezm"> <img id='fb1'src="fb24.png"></a>
+    <a href="https://plus.google.com/102428061497567735125"> <img id='gplus1'src="gp16.png"></a>
   </p>
+  <p align="center">Derechos reservados por Cristian y Raul©</p>
+  </footer>
   <script src="js/jquery-1.11.2.min.js"></script>
   <script src="js/code.js"></script>
 </body>
